--- a/source/emocon2rep.ipynb
+++ b/source/emocon2rep.ipynb
@@ -78,16 +78,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "6d5c5ee1-63f8-42cd-a9b8-9541380b2ecb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 10\u001b[0m\n\u001b[0;32m      7\u001b[0m representatives \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mjoy\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlike\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcalm\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msorrow\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdislike\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfear\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexcitement\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msurprise\u001b[39m\u001b[38;5;124m'\u001b[39m,\u001b[38;5;124m'\u001b[39m\u001b[38;5;124manger\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mneutral\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# 代表要素の単語をkey、そのw2vベクトルをvalueとする辞書の作成\u001b[39;00m\n\u001b[1;32m---> 10\u001b[0m filtered_vectors \u001b[38;5;241m=\u001b[39m {word: \u001b[43mmodel\u001b[49m[word] \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m representatives}\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# (  KeyedVectorsで作成したインスタンスは、.key_to_indexでキー検索、.vector_sizeでサイズ )\u001b[39;00m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# model_reの初期化\u001b[39;00m\n\u001b[0;32m     14\u001b[0m model_re \u001b[38;5;241m=\u001b[39m KeyedVectors(vector_size\u001b[38;5;241m=\u001b[39mmodel\u001b[38;5;241m.\u001b[39mvector_size)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "## 代表要素を抽出したw2vの作成 : model_re\n",
     "\n",
     "# [1] file:///C:/ehime/competition/jp_analy/article/E6-2.pdf\n",
     "# excitement, surprise, shameは0, 顔文字としての影響を受けにくい\n",
-    "representatives = ['joy','like','calm','sorrow','dislike','fear','excitement','surprise','shame\n",
+    "representatives = ['joy','like','calm','sorrow','dislike','fear','excitement','surprise','shame']\n",
     "# shame判定ばっかりになってしまう --> angerが欲しい & neutral の追加\n",
     "representatives = ['joy','like','calm','sorrow','dislike','fear','excitement','surprise','anger', 'neutral']\n",
     "\n",
@@ -646,7 +658,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -660,7 +672,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
